...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:buttonTint="?attr/colorPrimary"
                    android:text="@string/btn_pending_deploy" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbCantOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/field_cannot_open" />

...
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDepth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789"
                android:textColor="@color/textColorPrimary"
                android:paddingTop="14dp"
...
                android:background="@color/white"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <RadioButton
                    android:id="@+id/rbConnectPipe0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hanging_no"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp" />
                <RadioButton
                    android:id="@+id/rbConnectPipe1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hanging_yes"
                    android:buttonTint="@color/colorPrimary"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="14sp"
...
